Fixed bug: Standard Fundable Amount and Special Fundable Amount columns were not sorting correctly after making changes to sort functionality related to case insensitivity. Also, modified CSS so that columns are merged on smaller displays.

--- a/Soltech.Samples.Fora.EdgarClient/src/app/app.component.css
+++ b/Soltech.Samples.Fora.EdgarClient/src/app/app.component.css
@@ -33,32 +33,96 @@
   transform: translateY(-50%);
 }
 
+/* 
+Generic Styling, for Desktops/Laptops 
+*/
+
 table {
-    table-layout:fixed;
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  margin: 0 auto;
+}
+/* Zebra striping */
+tr:nth-of-type(odd) {
+  background: #eee;
+}
+
+th {
+  background: #333;
+  color: white;
+  font-weight: bold;
 }
 
 th span {
-  text-decoration-line: underline;
-  cursor: pointer;
-}
+    text-decoration-line: underline;
+    cursor: pointer;
+  }
 
-tr:nth-child(even) {
-  /*background: #F2F2F2;*/
+td, th {
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
 }
+  /* 
+Max width before this PARTICULAR table gets nasty
+This query will take effect for any screen smaller than 760px
+and also iPads specifically.
+*/
+  @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
 
-tr:nth-child(odd) {
-    /*background: #FFF;*/
-}
+    /* Force table to not be like tables anymore */
+    table, thead, tbody, th, td, tr {
+      display: block;
+    }
 
-th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
+      /* Hide table headers (but not display: none;, for accessibility) */
+      thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+      }
 
-table {
-    margin: 0 auto;
-}
+    tr {
+      border: 1px solid #ccc;
+    }
 
-body {
-    width:auto;
+    td {
+      /* Behave  like a "row" */
+      border: none;
+      border-bottom: 1px solid #eee;
+      position: relative;
+      padding-left: 50%;
+    }
+
+      td:before {
+        /* Now like a table header */
+        position: absolute;
+        /* Top/left values mimic padding */
+        top: 6px;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+      }
+
+      /*
+	Label the data
+	*/
+      td:nth-of-type(1):before {
+        content: "CIK";
+      }
+
+      td:nth-of-type(2):before {
+        content: "Name";
+      }
+
+      td:nth-of-type(3):before {
+        content: "Standard Fundable Amount";
+      }
+
+      td:nth-of-type(4):before {
+        content: "Special Fundable Amount";
+      }
+  }
 }
